tests/ui/cve/cve_2020_35873/cve_2020_35873_cross_stmt.stderr
error: use a pointer from `std::ffi::CString` after dropped
  --> tests/ui/cve/cve_2020_35873/cve_2020_35873_cross_stmt.rs:33:25
   |
LL |         unsafe { check!(ffi::sqlite3session_attach(self.sess, table)) };
   |                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ used here
   |
note: the `std::ffi::CString` value is dropped here
  --> tests/ui/cve/cve_2020_35873/cve_2020_35873_cross_stmt.rs:29:9
   |
LL |         } else {
   |         ^
   = note: `#[deny(rpl::use_after_drop)]` on by default

error: aborting due to 1 previous error

